--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
             android:name=".PermissionsActivity"
             android:exported="false" />
         <activity
+            android:name=".MapScreen"
+            android:exported="false" />
+        <activity
             android:name=".RouteRegistration"
             android:exported="false" />
         <activity
