Create welcome screen using navigative java file and xml file

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TravelTime">
         <activity
+            android:name=".NavigativeActivity"
+            android:exported="false" />
+        <activity
             android:name=".PermissionsActivity"
             android:exported="false" />
         <activity
